--- a/ottergram/index.html
+++ b/ottergram/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-  <header>
+  <header class="main-header">
     <h1 class="logo-text">ottergram</h1>
   </header>
+  <main class="main-content">
   <ul class="thumbnail-list">
     
     <li class="thumbnail-item">
@@ -47,7 +48,48 @@
       </a>
     </li>
 
+    <li class="thumbnail-item">
+      <a href="#"> <img  class="thumbnail-image"  src="img/otter1.jpg" alt="Barry The Otter"> <span class="thumbnail-title">Barry</span> </a>
+    </li>
+
+    <li class="thumbnail-item">
+      <a href="#">
+        <img  class="thumbnail-image"  src="img/otter2.jpg" alt="Robin The Otter">
+        <span class="thumbnail-title">Robin</span>
+      </a>
+
+    </li>
+
+    <li class="thumbnail-item">
+      <a href="#">
+        <img  class="thumbnail-image"  src="img/otter3.jpg" alt="Maurice The Otter">
+        <span class="thumbnail-title">Maurice</span>
+      </a>
+    </li>
+
+    <li class="thumbnail-item">
+      <a href="#">
+        <img  class="thumbnail-image"  src="img/otter4.jpg" alt="Lesley The Otter">
+        <span class="thumbnail-title">Lesley</span>
+      </a>
+    </li>
+
+    <li class="thumbnail-item">
+      <a href="#">
+        <img  class="thumbnail-image"  src="img/otter5.jpg" alt="Barbara The Otter">
+        <span class="thumbnail-title">Barbara</span>
+      </a>
+    </li>
   </ul>
+
+  <div class="detail-image-container">
+    <div class="detail-image-frame">
+    <img class="detail-image" src="img/otter1.jpg" alt="">
+    <span class="detail-image-title">Stayin' Alive</span>
+  </div>
+    </div>
+  </main>
+
 </body>
 
 </html>
