--- a/ottergram/index.html
+++ b/ottergram/index.html
@@ -92,6 +92,11 @@
     </div>
   </main>
 
+  <div class= "homework-image">
+    <img src="img/flexboxfroggy.JPG" alt="flex box image">
+    <img src="img/gridgarden.JPG" alt="grid garden image">
+  </div>
+
 </body>
 
 </html>
