--- a/ottergram/index.html
+++ b/ottergram/index.html
@@ -82,6 +82,21 @@
           <span class="thumbnail-title">Barbara</span>
         </a>
       </li>
+
+      <li class="thumbnail-item">
+        <a href="img/flexboxfroggy.JPG">
+          <img class="thumbnail-image" src="img/flexboxfroggy.JPG" alt="flex box image">
+          <span class="thumbnail-title">FlexBoxFroggy</span>
+        </a>
+      </li>
+
+      <li class="thumbnail-item">
+        <a href="img/gridgarden.JPG">
+          <img class="thumbnail-image" src="img/gridgarden.JPG" alt="grid garden image">
+          <span class="thumbnail-title">Grid Garden</span>
+        </a>
+      </li>
+
     </ul>
 
     <div class="detail-image-container">
@@ -91,12 +106,6 @@
       </div>
     </div>
   </main>
-
-  <div class= "homework-image">
-    <img src="img/flexboxfroggy.JPG" alt="flex box image">
-    <img src="img/gridgarden.JPG" alt="grid garden image">
-  </div>
-
 </body>
 
 </html>
