--- a/ottergram/index.html
+++ b/ottergram/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, inital-scale=1">
   <title>ottergram</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <link rel="stylesheet" href="stylesheets/styles.css">
@@ -16,12 +17,15 @@
     <ul class="thumbnail-list">
 
       <li class="thumbnail-item">
-        <a href="#"> <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry The Otter"> <span
+        <a href="img/otter1.jpg" data-image-role="trigger" data-image-title="Stayin' Alive"
+          data-image-url="img/otter1.jpg">
+          <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry The Otter"> <span
             class="thumbnail-title">Barry</span> </a>
       </li>
 
       <li class="thumbnail-item">
-        <a href="#">
+        <a href="img/otter2.jpg" data-image-role="trigger" data-image-title="How Deep Is Your Love"
+          data-image-url="img/otter2.jpg">
           <img class="thumbnail-image" src="img/otter2.jpg" alt="Robin The Otter">
           <span class="thumbnail-title">Robin</span>
         </a>
@@ -29,80 +33,34 @@
       </li>
 
       <li class="thumbnail-item">
-        <a href="#">
+        <a href="img/otter3.jpg" data-image-role="trigger" data-image-title="You Should Be Dancing"
+          data-image-url="img/otter3.jpg">
           <img class="thumbnail-image" src="img/otter3.jpg" alt="Maurice The Otter">
           <span class="thumbnail-title">Maurice</span>
         </a>
       </li>
 
       <li class="thumbnail-item">
-        <a href="#">
+        <a href="img/otter4.jpg" data-image-role="trigger" data-image-title="Night Fever"
+          data-image-url="img/otter4.jpg">
           <img class="thumbnail-image" src="img/otter4.jpg" alt="Lesley The Otter">
           <span class="thumbnail-title">Lesley</span>
         </a>
       </li>
 
       <li class="thumbnail-item">
-        <a href="#">
+        <a href="img/otter5.jpg" data-image-role="trigger" data-image-title="To Love Somebody"
+          data-image-url="img/otter5.jpg">>
           <img class="thumbnail-image" src="img/otter5.jpg" alt="Barbara The Otter">
           <span class="thumbnail-title">Barbara</span>
         </a>
       </li>
-
-      <li class="thumbnail-item">
-        <a href="#"> <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry The Otter"> <span
-            class="thumbnail-title">Barry</span> </a>
-      </li>
-
-      <li class="thumbnail-item">
-        <a href="#">
-          <img class="thumbnail-image" src="img/otter2.jpg" alt="Robin The Otter">
-          <span class="thumbnail-title">Robin</span>
-        </a>
-
-      </li>
-
-      <li class="thumbnail-item">
-        <a href="#">
-          <img class="thumbnail-image" src="img/otter3.jpg" alt="Maurice The Otter">
-          <span class="thumbnail-title">Maurice</span>
-        </a>
-      </li>
-
-      <li class="thumbnail-item">
-        <a href="#">
-          <img class="thumbnail-image" src="img/otter4.jpg" alt="Lesley The Otter">
-          <span class="thumbnail-title">Lesley</span>
-        </a>
-      </li>
-
-      <li class="thumbnail-item">
-        <a href="#">
-          <img class="thumbnail-image" src="img/otter5.jpg" alt="Barbara The Otter">
-          <span class="thumbnail-title">Barbara</span>
-        </a>
-      </li>
-
-      <li class="thumbnail-item">
-        <a href="img/flexboxfroggy.JPG">
-          <img class="thumbnail-image" src="img/flexboxfroggy.JPG" alt="flex box image">
-          <span class="thumbnail-title">FlexBoxFroggy</span>
-        </a>
-      </li>
-
-      <li class="thumbnail-item">
-        <a href="img/gridgarden.JPG">
-          <img class="thumbnail-image" src="img/gridgarden.JPG" alt="grid garden image">
-          <span class="thumbnail-title">Grid Garden</span>
-        </a>
-      </li>
-
     </ul>
 
     <div class="detail-image-container">
       <div class="detail-image-frame">
-        <img class="detail-image" src="img/otter1.jpg" alt="">
-        <span class="detail-image-title">Stayin' Alive</span>
+        <img class="detail-image" data-image-role="target" src="img/otter1.jpg" alt="">
+        <span class="detail-image-title" data-image-role="title">Stayin' Alive</span>
       </div>
     </div>
   </main>
