--- a/ottergram/index.html
+++ b/ottergram/index.html
@@ -67,7 +67,7 @@
         <a href="">next(>)</a>
       </div>
       <div class="button-prev">
-        <a href="">back() </a>
+        <a href="">back(<) </a>
       </div>
 
 
